Fix accordion bug & correct spacing

--- a/assets/source/sass/color/_box.scss
+++ b/assets/source/sass/color/_box.scss
@@ -27,7 +27,7 @@
 
         #main-content .box.box-panel,
         #main .box.box-panel {
-            .box-title, .box-title.link-item, h5, h4 {
+            .box-title, .box-title.link-item {
                 color: white;
                 background-color: $primary;
             }
