--- a/assets/source/sass/hbgprime/config/_typography.scss
+++ b/assets/source/sass/hbgprime/config/_typography.scss
@@ -27,6 +27,6 @@ $code-font-family: 'Fira Sans', 'Monaco', 'Consolas', 'Menlo', 'Lucida Console',
 // ***************************************************************
 // *** Content
 // ***************************************************************
-$content-gutter: 15px;
+$content-gutter: 16px;
 
 $mark-padding: 0 .15em;
