--- a/assets/source/sass/scope/_sidebar.scss
+++ b/assets/source/sass/scope/_sidebar.scss
@@ -42,16 +42,16 @@ $familjen-blue-box-bg: #F7FCFF;
     }
 
     & > .box-image + .box-title {
-        margin-top: -10px;
+        margin-top: -12px;
     }
 
     & > .box-title {
-        padding: 30px;
+        padding: 32px;
     }
 
     & > .box-title + .box-content {
         padding-top: 0px !important;
-        margin-top: -25px;
+        margin-top: -24px;
     }
 
 }
